assets/stylesheets/style.css
/* Universal Styles */
img {
    font-size: 0;
    vertical-align: top;
}
* {
    box-sizing: border-box;
}
html {
    font-size: 18px;
}
body {
    line-height: 1.5;
    font-family: sans-serif;
    background: #24252A;
}
h1 {
    font-size: 1.3rem;
}
h2 {
    font-size: 3rem;
}
h3 {
    font-size: 1.5rem;
}
a {
    text-decoration: none;
}
.wrapper {
    max-width: 1300px;
    width: 100%;
    padding: 0 2rem;
    margin: 0 auto;
}

.btn {
    padding: 1rem;
    color: #fff;
    font-weight: bold;
    background: rgba(213, 72, 86, 0.678);
    border: none;
    border-radius: 5px;
    margin: 1rem 0;
}
.btn:hover {
    background: rgba(213, 72, 86, 1);;
}
.icon {
    padding-left: 0.5rem;
    font-size: 0.8rem;
}
.active {
    border-bottom: 3px solid rgb(213, 72, 86);
}
.ham-icon {
    font-size: 1.5rem;
    color: #fff;
}

/* Header */

.nav-bar {
    justify-content: space-between;
    align-items: center;
    padding: 1rem;
}
.logo {
    color: #fff;
    font-weight: bold;
}
.menu-links a {
    padding: 0.5rem 1rem;
    color: #fff;
    font-weight: bold;
}
.ham-menu-links {
    display: none;
}

.hero {
    padding: 3rem 0 0 1rem;
}
.hero-div {
    grid-template-columns: repeat(2, 1fr);
}
.hero-frame {
    background: url("../media/frame.png");
    background-position: center;
    background-size: contain;
    background-repeat: no-repeat;
    width: 30rem;
    height: 300px;
    justify-self: end;
}
.hero-img {
    margin: 2rem auto;
    width: 70%;
    height: 200px;
    background: url("../media/hero.jpg");
    background-repeat: no-repeat;
    background-size: cover;
}
/*
.hero-img img {
    width: 100%;
    position: absolute;
    top: 1.7rem;
    left: 4.6rem;
}
*/
.hero h2 {
    color: #fff;
    font-weight: bold;
}
.hero p {
    padding: 2rem 0;
    color: #777777;
}

.genric-header {
    background: #2E2E35;
    position: fixed;
    width: 100%;
}
.grid1 {
    display: grid;
}

/* Header Media Query */
@media all and (min-width: 700px) and (max-width: 899px) {
    .hero-img {
        width: 50%;
    }
}
@media all and (max-width: 768px) {
    html {
        font-size: 16px;
    }
    .hero {
        padding: 0;
    }
    .hero-div {
        grid-template-columns: 1fr;
    }
    .hero-text,
    .hero-frame {
        width: 100%;
    }
    .hero-img {
        margin-top: 7rem;
        height: 120px;
    }
    .hero-text {
        grid-row: 2;
        text-align: center;
    }
    .menu-links {
        display: none;
    }
    .ham-menu-links {
        display: block;
    }
}

/* main */



.flex {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
}

/* Responsive Image */

.img-responsive {
    width: 100%;
    height: auto;
    vertical-align: top;
}

/* Main */
.article{
    background: #24252A;
    margin: 2rem 0;
}

.article-container {
    background: rgb(49, 49, 49);
    margin-bottom: 3.3rem;
}

.article-img{
    width: 40%;
}

.article-description{
    width: 60%;
    padding: 0 3rem;
}
.article-heading {
    font-size: 1.8rem;
    color: rgb(236, 236, 236);
    font-weight: 900;
    margin-bottom: 2rem;
}
.article-text{
    color: rgb(139, 139, 139);
    font-weight: 400;
}


/* section grid */

.grid{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    background: #24252A;
    padding: 2rem 5rem;
}

.article-1{
    padding: 4rem 2rem;
    text-align: center;
}
.article-1 i{
    font-size: 2rem;
    color: rgb(255, 75, 75);
    padding: 1rem;
}
.article-1 h2 {
    font-size: 1.5rem;
    color: #fff;
    font-weight: 900;
}
.article-1 p {
    font-size: 0.8rem;
    font-weight: 200;
    padding: 0 1rem;
    margin-top: 1rem;
    color: #aaa;
}


/* GENERIC-PAGE CSS */

.page-name {
    text-align: center;
    padding: 10rem;
    color: grey;
    font-size: 0.8rem;
    width: 80%;
}
.page-name h2{
    font-size: 3rem;
    color: white;
    font-weight: bold;
    padding-bottom: 2rem;
}

.genericimage {
    width: 80%;
    padding: 5rem;
    height: 50rem;
}

.generic-text {
    width: 80%;
    margin: 0 auto;
}

.generic-text p{
    color: rgb(139, 139, 139);
    font-weight: 400;
    font-size: 0.7rem;
}

/* Footer */

.footer-c {
    margin: 0 auto;
}

.footer-text {
    text-align: center;
    padding: 2rem 0 2rem 0;
    width: 80%;
}
.footer-text p{
    color: rgb(139, 139, 139);
    font-weight: 400;
    font-size: 0.7rem;
}


/* BOTTOM FORM */

.bottom-form {
    justify-content: center;
    padding: 2rem 0 2rem 0;


}

.form-control {
  display: block;
  width: 100%;
  padding: 0.8rem 4rem;
  margin-bottom: 2rem;
  font-size: 0.7rem;
  border: 1px solid rgba(73, 73, 82, 0.2);
  border-radius: 5px;
}
.form-control::placeholder {
  color: #c3c3c3;
  text-align: left;
}

.input-field {
  width: 48%;
  background: transparent;
}
textarea {
    background: transparent;
}

/* CONTACT GRID */

.grid-footer {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(3, 1fr);
    justify-content: : space-between;
}

.grid-footer i{
    font-size: 1.2rem;
    color: rgb(255, 75, 75);
    padding: 2rem;
    /* transform: rotate(30deg); */

}


.grid-footer a,
.grid-footer p {
    color: #777;
}

.grid-footer-wrapper {
    max-width: 1300px;
    width: 100%;
    padding: 0 2rem;
    margin: 0 auto;
}

.footersign {
  background: #24252A;
  text-align: center;
  color: #888;
  padding: 5rem;
}

/* Footer Media Query */
@media all and (max-width: 900px) {
    html {
        font-size: 16px;
    }

@media all and (max-width: 768px){
    html{
        font-size: 12px;
    }
    .article-container{
        width: 100%;
        margin: 0 auto;
        text-align: center;
        justify-content: center;
        margin-bottom: 2rem;
    }
    .article-description, .article-img {
        margin: 0 auto;
        padding: 0;
        width: 80%;
        margin: 0;
    }
    .img-responsive{
        width: 80%;
    }
    .grid{
        grid-template-columns: 1fr;
        justify-content: center;
        width: 80%;
        padding: 0;
    }
}

